--- a/conf/config.json
+++ b/conf/config.json
@@ -1,5 +1,8 @@
 {
-    "debug": true,
+    "dns": [
+        {"host": "8.8.8.8", "port": 53},
+        {"host": "8.8.4.4", "port": 53}
+    ],
 
     "server_port": 8388,
     "password": "m",
