--- a/conf/config.json
+++ b/conf/config.json
@@ -11,10 +11,10 @@
     "protocol_param": "",
     "obfs": "tls1.2_ticket_auth_compatible",
     "obfs_param": "",
-    "speed_limit_per_con": 0,
-    "speed_limit_per_user": 0,
 
     "timeout": 120,
+
+    "udp_enable": false,
     "udp_timeout": 60,
     "udp_cache": 64,
 
